--- a/infrastructure/src/main/resources/application.properties
+++ b/infrastructure/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+sonar.host.url=http://127.0.0.1:9000
