--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port=9797
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-sonar.host.url=http://127.0.0.1:9000
+springdoc.swagger-ui.path=/api/v1/swagger-ui.html
+springdoc.api-docs.path=/api/v1/api-docs
